--- a/first-playbook.yml
+++ b/first-playbook.yml
@@ -1,2 +1,15 @@
 ---
--name: first-playbook
+- name: Install and Start nginx
+  hosts: all
+  become: root
+
+  tasks:
+    - name: Install nginx
+      apt:
+        name: nginx
+        state: present  
+    - name: Start nginix
+      service:
+       name: nginix
+       state: started
+
